# monorepo-example

./: BUILD  README.md  WORKSPACE  deps.bzl  go.mod
cmd/person_service/: BUILD.bazel  main.go
cmd/service1/: BUILD.bazel
pkg/person/: BUILD.bazel  service.go
pkg/proto/person/: BUILD.bazel  person.pb.go  person.proto
tools/: gen-proto.sh
