load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "person_service_lib",
    srcs = ["main.go"],
    importpath = "github.com/cory-evans/monorepo-example/cmd/person_service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/person",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "person_service",
    embed = [":person_service_lib"],
    visibility = ["//visibility:public"],
)
