load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "person_proto",
    srcs = ["person.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "person_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/cory-evans/monorepo-example/pkg/proto/person",
    proto = ":person_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "person",
    embed = [":person_go_proto"],
    importpath = "github.com/cory-evans/monorepo-example/pkg/proto/person",
    visibility = ["//visibility:public"],
)
